# tilde

./: .env.example  .gitignore  Cargo.toml  INSTALL.md  README.md  app_spec.txt  claude-progress.txt  feature_list.json  init.sh
assets/: login.html
crates/tilde-backup/: Cargo.toml
crates/tilde-backup/src/: lib.rs  offsite.rs
crates/tilde-cal/: Cargo.toml
crates/tilde-cal/src/: lib.rs  push.rs
crates/tilde-card/: Cargo.toml
crates/tilde-card/src/: lib.rs
crates/tilde-cli/: Cargo.toml
crates/tilde-cli/src/: lib.rs
crates/tilde-collections/: Cargo.toml
crates/tilde-collections/src/: lib.rs
crates/tilde-core/: Cargo.toml
crates/tilde-core/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs
crates/tilde-dav/: Cargo.toml
crates/tilde-dav/src/: lib.rs
crates/tilde-email/: Cargo.toml
crates/tilde-email/src/: imap.rs  index.rs  lib.rs  maildir.rs  parser.rs
crates/tilde-mcp/: Cargo.toml
crates/tilde-mcp/src/: lib.rs
crates/tilde-notes/: Cargo.toml
crates/tilde-notes/src/: lib.rs
crates/tilde-notify/: Cargo.toml
crates/tilde-notify/src/: lib.rs
crates/tilde-photos/: Cargo.toml
crates/tilde-photos/src/: exiftool.rs  ingest.rs  lib.rs  metadata.rs  organize.rs  thumbnail.rs  watcher.rs
crates/tilde-server/: Cargo.toml
crates/tilde-server/src/: commands.rs  lib.rs  main.rs  tunnel.rs
locales/: en.ftl
migrations/: 001_initial.sql  002_file_properties.sql  003_caldav_carddav.sql  004_backup_snapshots.sql  005_push_subscriptions.sql
plans/: 2026-04-24-newt-integration-and-testing.md
tests/integration/: test_webdav.sh
