[workspace]
resolver = "2"
members = [
    "crates/tilde-core",
    "crates/tilde-server",
    "crates/tilde-cli",
    "crates/tilde-dav",
    "crates/tilde-cal",
    "crates/tilde-card",
    "crates/tilde-photos",
    "crates/tilde-notes",
    "crates/tilde-collections",
    "crates/tilde-email",
    "crates/tilde-mcp",
    "crates/tilde-backup",
    "crates/tilde-notify",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
# HTTP & async
axum = "0.8"
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "cors", "set-header"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"

hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2", "service"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# CLI & config
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# XML
quick-xml = "0.37"

# Dates
jiff = "0.2"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
subtle = "2"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Markdown
comrak = "0.36"

# Paths
directories = "6"

# Image (disable heavy codecs like AVIF/rav1e to save disk and compile time)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "gif"] }

# HEIC/HEIF decoding
libheif-rs = "2.7"

# Signatures
minisign-verify = "0.2"

# Embed
rust-embed = "8"

# File watching
notify = "7"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# URL encoding
urlencoding = "2"

# Email parsing
mailparse = "0.15"

# Filesystem
fs2 = "0.4"
libc = "0.2"

# Archive
tar = "0.4"
flate2 = "1"

# systemd
sd-notify = "0.4"

# IMAP
imap = "2"
native-tls = "0.2"
openssl = { version = "0.10", features = ["vendored"] }

# HTTP client (for notifications)
reqwest = { version = "0.12", features = ["json"] }

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# Internal crates
tilde-core = { path = "crates/tilde-core" }
tilde-server = { path = "crates/tilde-server" }
tilde-cli = { path = "crates/tilde-cli" }
tilde-dav = { path = "crates/tilde-dav" }
tilde-cal = { path = "crates/tilde-cal" }
tilde-card = { path = "crates/tilde-card" }
tilde-photos = { path = "crates/tilde-photos", default-features = false }
tilde-notes = { path = "crates/tilde-notes" }
tilde-collections = { path = "crates/tilde-collections" }
tilde-email = { path = "crates/tilde-email" }
tilde-mcp = { path = "crates/tilde-mcp" }
tilde-backup = { path = "crates/tilde-backup" }
tilde-notify = { path = "crates/tilde-notify" }
