[package]
name = "tilde-backup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
rusqlite = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
quick-xml = { workspace = true }
urlencoding = { workspace = true }
