[package]
name = "tilde-card"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
sha2 = { workspace = true }
quick-xml = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
