[package]
name = "tilde-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
directories = { workspace = true }
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }
url = "2"
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
