[package]
name = "tilde-dav"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
quick-xml = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
