[package]
name = "tilde-email"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
jiff = { workspace = true }
mailparse = { workspace = true }
tokio = { workspace = true }
imap = { workspace = true }
native-tls = { workspace = true }
