[package]
name = "tilde-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tilde-cal = { workspace = true }
tilde-card = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
axum = { workspace = true }
