[package]
name = "tilde-notify"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
libc = { workspace = true }
urlencoding = { workspace = true }
