[package]
name = "tilde-photos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
