[package]
name = "tilde-photos"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["heic"]
heic = ["dep:libheif-rs"]

[dependencies]
tilde-core = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
libheif-rs = { workspace = true, optional = true }
notify = { workspace = true }
tokio = { workspace = true }
nom-exif = { workspace = true }
xmp_toolkit = { workspace = true }
